grammar.js
const WS = choice(" ", "\t");
const NEWLINE = "\n";

module.exports = grammar({
	name: "asm6502",

	extras: ($) => [
		/\s/, // whitespace control
		$.comment,
	],

	conflicts: ($) => [
		// operation conflicts (ex: sta #0, or sta 5)
		[$._immediate_opcode, $._absolute_opcode, $._indirect_opcode],
		[$._immediate_opcode, $._absolute_opcode],
		[$._absolute_opcode, $._indirect_opcode],
	],

	rules: {
		source_file: ($) => repeat($._statement),

		_statement: ($) =>
			choice($._operation, $.label, $.assignment, $._control_command),

		/* grammar misc */
		comment: ($) => /;.*/,

		_ws_sep: ($) => token.immediate(repeat1(WS)),
		_ws_end: ($) => token.immediate(seq(repeat(WS), NEWLINE)),

		_control_command: ($) =>
			choice(
				$.file_control_command,
				$.section_control_command,
				$.byte_control_command,
				$.export_control_command,
				$.import_control_command,
				$.segment_control_command,
				$.address_control_command,
				$.proc_control_command,
			),

		/* ex: include */
		file_control_command: ($) =>
			seq(
				choice($._inc_name),
				$._ws_sep,
				alias(choice(/[._a-zA-Z0-9]+/, /"[._a-zA-Z0-9]+"/), $.file_name),
				//$._ws_end,
			),

		export_control_command: ($) =>
			seq(choice($._export_name), $._ws_sep, $.global_label),

		import_control_command: ($) =>
			seq(choice($._import_name), $._ws_sep, $.global_label),

		segment_control_command: ($) => seq(choice($._segment_name), $.string),

		section_control_command: ($) =>
			seq(
				choice($._sec_name),
				$._ws_sep,
				alias(/[._a-zA-Z][._a-zA-Z0-9]+/, $.section_name),
			),

		byte_control_command: ($) =>
			seq(choice($._word_name, $._byte_name), $._byte_list),

		address_control_command: ($) =>
			seq(choice($._address_name), choice($.num_literal, $.global_label)),

		proc_control_command: ($) =>
			choice(seq($._proc_name, $.global_label), $._endproc_name),

		_inc_name: ($) => alias(token(".include"), $.control_command),
		_export_name: ($) => alias(token(".export"), $.control_command),
		_import_name: ($) => alias(token(".import"), $.control_command),
		_segment_name: ($) => alias(token(".segment"), $.control_command),
		_sec_name: ($) => alias(token(".section"), $.control_command),
		_word_name: ($) => alias(token("word"), $.control_command),
		_byte_name: ($) => alias(token(".byte"), $.control_command),
		_address_name: ($) => alias(token(".addr"), $.control_command),
		_proc_name: ($) => alias(token(".proc"), $.control_command),
		_endproc_name: ($) => alias(token(".endproc"), $.control_command),

		assignment: ($) => seq($.global_label, "=", $._expr),

		/* labels */

		label: ($) =>
			seq(choice($.local_label, $.global_label, $.cheap_local_label), ":"),

		_byte_list: ($) =>
			repeat1(choice(seq($._byte_literal, $.comma), $._byte_literal)),

		_byte_literal: ($) => choice($.num_literal, $.char_literal),

		/* expression definitions */

		_expr: ($) =>
			choice(
				$.num_literal,
				$._identifier,
				seq("(", $._expr, ")"),
				$.binary_expr,
				$.unary_expr,
			),

		_identifier: ($) => choice($.local_label, $.global_label),

		num_literal: ($) =>
			token(
				choice(
					repeat1(/[0-9]/),
					seq("%", token.immediate(repeat1(/[01]/))),
					seq("$", token.immediate(repeat1(/[0-9a-fA-F]/))),
				),
			),

		char_literal: ($) => token(seq("'", token.immediate(/[^\\\n\r]{1}/), "'")),

		binary_expr: ($) =>
			prec.left(
				seq(
					$._expr,
					alias(choice("+", "-", "*", "/", "<<", ">>", "&", "|"), $.operator),
					$._expr,
				),
			),

		unary_expr: ($) =>
			prec(
				2,
				seq(
					// TODO: should this be an operator? or just part of the literal?
					alias(/[-\+<>~]/, $.operator),
					$._expr,
				),
			),

		/* operation definitions */

		_operation: ($) =>
			seq(
				choice($.implied, $.relative, $.immediate, $.absolute, $.indirect),
				//$._ws_end,
			),

		implied: ($) => seq(alias($._implied_opcode, $.opcode)),
		relative: ($) =>
			seq(alias($._relative_opcode, $.opcode), $._ws_sep, $._expr),

		immediate: ($) =>
			seq(
				alias($._immediate_opcode, $.opcode),
				$._ws_sep,
				token.immediate("#"),
				$._expr,
			),
		absolute: ($) =>
			prec.dynamic(
				1,
				seq(
					alias($._absolute_opcode, $.opcode),
					$._ws_sep,
					$._expr,
					optional(choice($._reg_x, $._reg_y)),
				),
			),
		// indirect comes before absolute
		indirect: ($) =>
			prec.dynamic(
				2,
				seq(
					alias($._indirect_opcode, $.opcode),
					$._ws_sep,
					token.immediate("("),
					$._expr,
					choice(seq(")"), seq($._reg_x, ")"), seq(")", $._reg_y)),
				),
			),

		_reg_x: ($) => seq(",", alias("x", $.register)),
		_reg_y: ($) => seq(",", alias("y", $.register)),

		/* opcode definitions */
		_implied_opcode: ($) =>
			choice(
				/[nN][oO][pP]/,
				/[cC][lL][cC]/,
				/[cC][lL][dD]/,
				/[cC][lL][iI]/,
				/[cC][lL][vV]/,
				/[dD][eE][xX]/,
				/[dD][eE][yY]/,
				/[iI][nN][xX]/,
				/[iI][nN][yY]/,
				/[sS][eE][cC]/,
				/[sS][eE][dD]/,
				/[sS][eE][iI]/,
				/[sS][tT][pP]/,
				/[tT][aA][xX]/,
				/[tT][aA][yY]/,
				/[tT][sS][xX]/,
				/[tT][xX][aA]/,
				/[tT][xX][sS]/,
				/[tT][yY][aA]/,
				/[wW][aA][iI]/,
				// a register
				/[aA][sS][lL]/,
				/[dD][eE][cC]/,
				/[iI][nN][cC]/,
				/[lL][sS][rR]/,
				/[rR][oO][lL]/,
				/[rR][oO][rR]/,
				// stack based
				/[bB][rR][kK]/,
				/[pP][hH][aA]/,
				/[pP][hH][pP]/,
				/[pP][hH][xX]/,
				/[pP][hH][yY]/,
				/[pP][lL][aA]/,
				/[pP][lL][pP]/,
				/[pP][lL][xX]/,
				/[pP][lL][yY]/,
				/[rR][tT][iI]/,
				/[rR][tT][sS]/,
			),

		_relative_opcode: ($) =>
			choice(
				/[bB][cC][cC]/,
				/[bB][cC][sS]/,
				/[bB][eE][qQ]/,
				/[bB][mM][iI]/,
				/[bB][nN][eE]/,
				/[bB][pP][lL]/,
				/[bB][rR][aA]/,
				/[bB][vV][cC]/,
				/[bB][vV][sS]/,
			),

		_immediate_opcode: ($) =>
			choice(
				/[aA][dD][cC]/,
				/[aA][nN][dD]/,
				/[bB][iI][tT]/,
				/[cC][mM][pP]/,
				/[cC][pP][xX]/,
				/[cC][pP][yY]/,
				/[eE][oO][rR]/,
				/[lL][dD][aA]/,
				/[lL][dD][xX]/,
				/[lL][dD][yY]/,
				/[oO][rR][aA]/,
				/[sS][bB][cC]/,
			),

		_absolute_opcode: ($) =>
			choice(
				/[aA][dD][cC]/,
				/[aA][nN][dD]/,
				/[aA][sS][lL]/,
				/[bB][iI][tT]/,
				/[cC][mM][pP]/,
				/[cC][pP][xX]/,
				/[cC][pP][yY]/,
				/[dD][eE][cC]/,
				/[eE][oO][rR]/,
				/[iI][nN][cC]/,
				/[jJ][mM][pP]/,
				/[jJ][sS][rR]/,
				/[lL][dD][aA]/,
				/[lL][dD][xX]/,
				/[lL][dD][yY]/,
				/[lL][sS][rR]/,
				/[oO][rR][aA]/,
				/[rR][oO][lL]/,
				/[rR][oO][rR]/,
				/[sS][bB][cC]/,
				/[sS][tT][aA]/,
				/[sS][tT][xX]/,
				/[sS][tT][yY]/,
				/[sS][tT][zZ]/,
				/[tT][rR][bB]/,
				/[tT][sS][bB]/,
			),

		_indirect_opcode: ($) =>
			choice(
				// ind abs
				/[jJ][mM][pP]/,
				// ind zp
				/[aA][dD][cC]/,
				/[aA][nN][dD]/,
				/[cC][mM][pP]/,
				/[eE][oO][rR]/,
				/[lL][dD][aA]/,
				/[oO][rR][aA]/,
				/[sS][bB][cC]/,
				/[sS][tT][aA]/,
			),

		string: ($) =>
			seq('"', repeat(choice($.string_content, $.escape_sequence)), '"'),

		// Content inside the string (anything except a backslash or double quote)
		string_content: ($) => token(/[^\\"\r\n]+/),

		// Rules for valid escape sequences (e.g., \n, \t, \")
		escape_sequence: ($) =>
			token(
				seq(
					"\\",
					choice(
						/[^xu]/, // Standard characters like \n, \t, \\, \"
						/x[0-9a-fA-F]{2}/, // Hex escapes (e.g., \x41)
						/u[0-9a-fA-F]{4}/, // Unicode escapes (e.g., \u0041)
					),
				),
			),

		comma: ($) => /,/,
		cheap_local_label: ($) => /@[a-zA-Z0-9_]+/,
		local_label: ($) => /\.[a-zA-Z0-9_]+/,
		global_label: ($) => /[a-zA-Z_][a-zA-Z0-9_]+/,
	},
});
