test/corpus/control_commands.txt
================================================================================
control_commands
================================================================================

.include h.itxts
.import Foo

.segment "HEADER"
  .byte 'N', 'E', 'S', $1A

.addr Main
.addr 0

.include cregs.s
.include "importantfile.s"

.section text
.section .text.entry

.proc Main 

.endproc



--------------------------------------------------------------------------------

(source_file
  (file_control_command
    (control_command)
    (file_name))
  (import_control_command
    (control_command)
    (global_label))    
  (segment_control_command
    (control_command)
    (string
      (string_content)))
  (byte_control_command
          (control_command)
          (char_literal)
          (comma)
          (char_literal)
          (comma)
          (char_literal)
          (comma)
          (num_literal))
  (address_control_command
    (control_command)
    (global_label))
  (address_control_command
    (control_command)
    (num_literal))
  (file_control_command
    (control_command)
    (file_name))
  (file_control_command
    (control_command)
    (file_name))
  (section_control_command
    (control_command)
    (section_name))
  (section_control_command
    (control_command)
    (section_name))
  (proc_control_command
    (control_command)
    (global_label))
  (proc_control_command
    (control_command)))    
