test/corpus/directives.txt
================================================================================
Directives
================================================================================

.include h.itxts

include cregs.s
include "importantfile.s"

section text
.section .text.entry

.byte 5+5



--------------------------------------------------------------------------------

(source_file
  (file_directive
    (directive)
    (file_name))
  (file_directive
    (directive)
    (file_name))
  (file_directive
    (directive)
    (file_name))
  (section_directive
    (directive)
    (section_name))
  (section_directive
    (directive)
    (section_name))
  (imm_directive
    (directive)
    (binary_expr
      (num_literal)
      (operator)
      (num_literal))))
