test/corpus/labels.txt
================================================================================
Labels
================================================================================


label:
  lda #0

@loop:

.label2:
  sta (label+5,x)
label: lda #0

--------------------------------------------------------------------------------

(source_file
  (label
    (global_label))
  (immediate
    (opcode)
    (num_literal))
  (label
    (cheap_local_label))
  (label
    (local_label))
  (indirect
    (opcode)
    (binary_expr
      (global_label)
      (operator)
      (num_literal))
    (register))
  (label
    (global_label))
  (immediate
    (opcode)
    (num_literal)))
